--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="rustblog1.css"> <!--external css file-->
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <title>Learning the Rust Programming Language</title>
+        <style></style>
+    </head>
 <body>
-<h1>Hello World</h1>
+<h1>Learn Rust with Me</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
