--- a/index.html
+++ b/index.html
@@ -1,13 +1,55 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="rustblog1.css"> <!--external css file-->
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>Learning the Rust Programming Language</title>
-        <style></style>
-    </head>
+
+<head>
+    <link rel="stylesheet" type="text/css" href="rustblog1.css"> <!--external css file-->
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Learning the Rust Programming Language</title>
+    <style></style>
+</head>
+
 <body>
-<h1>Learn Rust with Me</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <div>
+        <h1>Learning the Rust Programming Language</h1>
+        <h2>Introduction | Installation | Concepts | Project Idea | Findings | Source Code | Next</h2>
+        <h3>Introduction</h3>
+        <p>Rust is an open-source system level programming language for developing software that is typically written
+            in other popular languages such as C or C++. Created by Mozilla Research employee Graydon Hoare to address
+            issues concerning memory errors and building concurrent programs in C and C++. Some notable programs you
+            could build with this language are CLI tools, web apps, network services, and embedded systems.<br>As a Java
+            developer who mainly writes high-level codes, learning Rust may be a daunting task. For the time being, I
+            will limit myself to using Rust in the same way that I use Java, gradually progressing to writing
+            system-level code. However, There are benefits to using this language for a better coding experience, this
+            includes.
+        </p>
+        <ul>
+            <li>
+                <p>Memory safety – Common memory-related issues are avoided before the programme is even compiled,
+                    thanks to Rust’s syntax and language metaphor, as the compiler will force you to fix them before it
+                    even compiles.
+                    Null Pointers: Java vs. Rust
+                </p>
+            </li>
+            <li>
+                <p>Speed – Performance is improved by Rust’s zero cost abstraction and the lack of a garbage collector.
+                    If you didn’t know, Java’s garbage collector creates some runtime overhead that is out of our
+                    control as programmers.
+                </p>
+            </li>
+            <li>
+                <p>Concurrency – By leveraging data ownership and type checking, many concurrency errors are flagged by
+                    the compiler rather than discovered at runtime.
+                </p>
+            </li>
+        </ul>
+        <p>Sure, Java is known for many criticisms. In fact, I’ve met some people who hate it, so why should we learn
+            Rust when it wouldn’t be surprising to say that other programming languages are superior to Java? Well, Java
+            isn’t entirely bad, just like its rivals, it has its benefits and disadvantages. Rust, on the other, hand
+            has been regarded as the most loved programming language on Stack Overflow for many years. It is safe to say
+            that Rust is a great language to learn given that Stack Overflow has been the most popular exchange network
+            for programmers. Why don’t we get it a try?
+        </p>
+    </div>
 </body>
+
 </html>
