--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </p>
             </li>
             <li>
-                <p><b>Rustc</b>responsible for translating Rust source code to machine language.</p>
+                <p><b>Rustc</b> - responsible for translating Rust source code to machine language.</p>
             </li>
         </ul>
         <br><h3><b>Project Ideas</b></h3>
@@ -108,7 +108,7 @@
                     number.</p>
             </li>
             <li>
-                <p><b>Guessing Game (Enhanced)</b>Works the same as the former but now the program will account the
+                <p><b>Guessing Game (Enhanced)</b> - Works the same as the former but now the program will account the
                     user's total number of correct guesses over the number of games they played.</p>
             </li>
         </ul>
@@ -149,6 +149,9 @@
             <li>
                 <p>This language is a pain in the butt. I frequently get compile errors because of the compiler’s
                     design. Although unpleasant, it's a good thing.</p>
+            </li>
+            <li>
+                <p>It uses a manifest file in a TOML format. You put the external sources that you'll be using for your code inside here including dependency tables, packages, cargo features, target tables, badges, patches, replacements, profile, workspace, and other features.</p>
             </li>
         </ul>
         <br><h3><b>Source Code</b></h3>
