--- a/index2.html
+++ b/index2.html
@@ -88,12 +88,12 @@
             reference to the next node is stored.
             <br><br>
             First off is to initialize our project by creating it through the terminal using cargo.<br><br>
-            <img id="cargoLib" src="cargoLib.JPG">
+            <img id="cargoLib" src="cargoLib.jpg">
             <br><br>
             A linked list is essentially a recursive structure in which a node can be expressed in two ways: empty or
             followed by a node that could be one of the two variants, and so on.
             <br><br>
-            <img id="enumErr" src="enumErr.JPG">
+            <img id="enumErr" src="enumErr.jpg">
             <br><br>
             This bothers Rust as it will not know how much space a type takes up at compile time. A recursive type is
             one type whose size cannot be determined at compile time because the nesting of values could go on
