--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     thanks to Rust's syntax and language metaphor, as the compiler will force you to fix them before it
                     even compiles.
                     Null Pointers: Java vs. Rust
-                </p><img id="nullPoint" src="nullPoint.JPG">
+                </p><img id="nullPoint" src="nullPoint.jpg">
             </li>
             <li>
                 <p><b>Speed</b> - Performance is improved by Rust's zero cost abstraction and the lack of a garbage
@@ -78,7 +78,7 @@
                 <p>Make sure that the path environment variable for all Rust Development related tools that are
                     installed to the “~/.cargo/bin” directory is available in your system’s environment variables. If
                     not,
-                    manually type yours in.</p><img id="environ" src="environmentVar.JPG">
+                    manually type yours in.</p><img id="environ" src="environmentVar.jpg">
             </li>
             <li>
                 <p>For the GUI, I decided to use Visual Studio Code and installed the “rust-analyzer” extension. Now we
@@ -132,7 +132,7 @@
                     of enums. </p>
             </li>
             <li>
-                <p>It has an organized library for errors. (https://doc.rust-lang.org/error_codes/error-index.html)</p><img src="errorLib.JPG">
+                <p>It has an organized library for errors. (https://doc.rust-lang.org/error_codes/error-index.html)</p><img src="errorLib.jpg">
             </li>
             <li>
                 <p>It has a peculiar way of making objects. An object requires a struct (a fixed set of data in a
